<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvWelcomeMessage"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddQuestion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGenreSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMessage" />

    <TextView
        android:id="@+id/tvGenreSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSelectGenre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spnGenres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddQuestion" />

    <Spinner
        android:id="@+id/spnGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/spnGenres"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPracticeQuiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenreSelection" />

    <Button
        android:id="@+id/btnPracticeQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPracticeQuiz"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGenres" />

</androidx.constraintlayout.widget.ConstraintLayout>