<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvAddGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddGenre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddQuestion"
        app:layout_constraintEnd_toStartOf="@+id/etAddGenre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddQuestion"
        android:layout_width="89dp"
        android:layout_height="21dp"
        android:text="@string/tvAddQuestion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddFirstChoice"
        app:layout_constraintEnd_toStartOf="@+id/etAddQuestion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddGenre" />

    <TextView
        android:id="@+id/tvAddFirstChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddFirstChoice"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddSecondChoice"
        app:layout_constraintEnd_toStartOf="@+id/etAddFirstChoice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddQuestion" />

    <TextView
        android:id="@+id/tvAddSecondChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddSecondChoice"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddThirdChoice"
        app:layout_constraintEnd_toStartOf="@+id/etAddSecondChoice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddFirstChoice" />

    <TextView
        android:id="@+id/tvAddThirdChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddThirdChoice"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddFourthChoice"
        app:layout_constraintEnd_toStartOf="@+id/etAddThirdChoice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddSecondChoice" />

    <TextView
        android:id="@+id/tvAddFourthChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddFourthChoice"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddAnswer"
        app:layout_constraintEnd_toStartOf="@+id/etAddFourthChoice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddThirdChoice" />

    <TextView
        android:id="@+id/tvAddAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAddAnswer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFollowUpFact"
        app:layout_constraintEnd_toStartOf="@+id/spnChoices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddFourthChoice" />

    <TextView
        android:id="@+id/tvFollowUpFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFollowUpFact"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddUserQuestion"
        app:layout_constraintEnd_toStartOf="@+id/etFollowUpFact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddAnswer" />

    <EditText
        android:id="@+id/etAddGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAddQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddGenre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAddFirstChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddQuestion"
        app:layout_constraintTop_toBottomOf="@+id/etAddGenre" />

    <EditText
        android:id="@+id/etAddFirstChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAddSecondChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddFirstChoice"
        app:layout_constraintTop_toBottomOf="@+id/etAddQuestion" />

    <EditText
        android:id="@+id/etAddSecondChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAddThirdChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddSecondChoice"
        app:layout_constraintTop_toBottomOf="@+id/etAddFirstChoice" />

    <EditText
        android:id="@+id/etAddThirdChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAddFourthChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddThirdChoice"
        app:layout_constraintTop_toBottomOf="@+id/etAddSecondChoice" />

    <EditText
        android:id="@+id/etAddFourthChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spnChoices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddFourthChoice"
        app:layout_constraintTop_toBottomOf="@+id/etAddThirdChoice" />

    <Spinner
        android:id="@+id/spnChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/SpinnerChoices"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etFollowUpFact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAddAnswer"
        app:layout_constraintTop_toBottomOf="@+id/etAddFourthChoice" />

    <EditText
        android:id="@+id/etFollowUpFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddUserQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFollowUpFact"
        app:layout_constraintTop_toBottomOf="@+id/spnChoices" />

    <Button
        android:id="@+id/btnAddUserQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddUserQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFollowUpFact" />

</androidx.constraintlayout.widget.ConstraintLayout>